refactor: remove prefix

--- a/example/global.css
+++ b/example/global.css
@@ -4,10 +4,10 @@
 
 @layer base {
   * {
-    @apply tw-border-border;
+    @apply border-border;
   }
   body {
-    @apply tw-bg-background tw-text-foreground;
+    @apply bg-background text-foreground;
   }
 }
 
